Fix word wrapping on iOS

--- a/data/style.css
+++ b/data/style.css
@@ -19,6 +19,7 @@ html {
 
 body {
     background-color: #fdfdfd;
+    word-wrap: break-word;
 }
 
 img {
